Sun Mar  2 15:51:00 2003  Joern Thyssen  <jth@gnubg.org>

	* boards.xml: add new board by JP White.

Sun Mar  2 15:28:50 2003  Joern Thyssen  <jth@gnubg.org>

	* gtkgame.c (RunGTK): force update of board
	(reported by several people)

Sun Mar  2 13:05:20 2003  Joern Thyssen  <jth@gnubg.org>

	* gtkgame.c [ENABLE_TRAIN_MENU]: disable train menu, unless
	cpp flag ENABLE_TRAIN_MENU is defined.
	The menu confuses new users, that either want to train their
	own network or thinks it generates bearoff databases.

Sun Mar  2 12:51:52 2003  Joern Thyssen  <jth@gnubg.org>

	* html.c (HTMLPrintMoveAnalysis): fix bug that lead to wrong
	color of table header
	(reported by Michael Depreli)

Tue Feb 25 14:01:00 GMT 2003  Jim Segrave <jes@jes-2.demon.nl>

	* play.c - fix stupid blunder preventing tutor mode from seeing
	  any double/pass errors.

Mon Feb 24 23:03:00 UTC 2003  Jim Segrave <jes@jes-2.demon.nl>

	* gtkgame.c - patch from Holger Bochnig to add navigation commands
 	  for next/previous unmarked move
	
Sun Feb 23 15:58:11 2003  Oystein Johansen <oystein@gnubg.org>

	* html.c (CommandExportPositionGammOnLine): Copy the file
	directly to the windows clipboard.

Fri Feb 21 23:29:42 UTC Jim Segrave <jes@jes-2.demon.nl>

	* backgammon.h, gnubg.c gtkboard.c, gtkgame.c, set.c
	  patches from Holger Bochnig to show legal destinations
	  when dragging checkers
	
Mon Feb 17 18:54:11 2003  Jim Segrave <jes@jes-2.demon.nl>

	* play.c: - fix so next marked finds errors on last play of game
	
Mon Feb  3 12:11:36 2003  Gary Wong  <gtw@gnu.org>

	* gtkboard.c (board_set): More fixes for dice positions -- set
	position independently of size when moving dice off board.

Thu Jan 30 18:52:34 2003  Joern Thyssen  <jth@gnubg.org>

	* gnubg.c (InvalidateStoredMoves): new function.
	* play.c (CommandRoll): invalidate stored moves otherwise the
	shown hint may be wrong if the player goes back to a previous
	move and roll new dice.
	(reported by Billie Patterson)
